# python-monorepo

./: .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
apps/app1/: Dockerfile  pyproject.toml
apps/app1/src/: main.py
apps/app1/src/app1/: __init__.py  main.py
apps/app2/: pyproject.toml
apps/app2/src/: main.py
apps/app2/src/app2/: main.py
apps/app3/: pyproject.toml
apps/app3/src/app3/: main.py
apps/app4/: hello.py  pyproject.toml
etc/docker/: Dockerfile
scripts/: README.md  code_check  code_format  code_lint
