[project]
name = "app2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alex Xela", email = "h825@pm.me"},
]
dependencies = [
    "pkg-requests @ file:///${PROJECT_ROOT}/../../packages/pkg-requests",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
